--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 </head>
 <body>
-    <nav class="navbar navbar-light header">
+    <nav class="navbar navbar-light header" id="cabecalho">
         <a class="navbar-brand" href="#">Início</a>
         <a class="navbar-brand" href="#">Entrar</a>
         <a class="navbar-brand" href="#">Inscrever-se</a>
