--- a/source/Cadastro.html
+++ b/source/Cadastro.html
@@ -129,16 +129,10 @@
                             <label for="floatingSelect">Selecione uma opção</label>
                         </div>
                         <br>
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                          Estou de acordo com as normas do site (clique nesse link para conhecer todas as regras).
-                        </label>
-                      </div>
                     </div>
                     <br>
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Entrar</button>
+                      <button type="submit" class="btn btn-primary">Enviar</button>
                     </div>
                   </form>
 </body>
