--- a/source/muralBabas.html
+++ b/source/muralBabas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mude o nome</title>
+    <title>Encontre aqui sua babá</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -42,24 +42,48 @@
         </nav>
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-4">
-                    <div class="row align-items-start">
+                <div class="col-6">
+                    <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/mulher1.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
+                        </div>
                         <div class="col">
-                            <img src="img/LogoAlibaba.png" alt="logo" width=280px style="padding: 10px" height=280px >
+                          <br><br><br>
+                          <h2>Babá Marina</h2>
+                          <h3 class="fs-6">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                          </h3>
+                          <br><br><br>
                         </div>
                     </div>
-                    <div class="row align-items-center">
-                        <div class="col">
-                            <img src="img/LogoAlibaba.png" alt="logo" width=280px style="padding: 10px" height=280px >
+                    <div class="row align-items-center" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/mulher2.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
                         </div>
+                          <div class="col">
+                            <br><br><br>
+                            <h2>Babá Marina</h2>
+                            <h3 class="fs-6">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                            </h3>
+                            <br><br><br>
+                          </div>
                     </div>
-                    <div class="row align-items-end">
+                    <div class="row align-items-end" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/mulher3.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
+                        </div>
                         <div class="col">
-                            <img src="img/LogoAlibaba.png" alt="logo" width=280px style="padding: 10px" height=280px >
+                          <br><br><br>
+                          <h2>Babá Marina</h2>
+                          <h3 class="fs-6">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                          </h3>
+                          <br><br><br>
                         </div>
                     </div>
                 </div>
-                <div class="col-4" id='map' style='width: 42rem; height: 54rem;'>
+                <div class="col-5 vh-100 min-vh-90" id='map' style='outline-style: dotted;'>
                 </div> 
             </div>   
         </div>
