--- a/source/muralVagas.html
+++ b/source/muralVagas.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mude o nome</title>
+    <title>Encontre aqui sua vaga</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script defer src="scripts.js"></script>
-    <link href="styleTemplate.css" rel="stylesheet">
+    <link href="styleMuralBabas.css" rel="stylesheet">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 </head>
@@ -40,7 +40,53 @@
             </ul>
           </div>
         </nav>
-        <div id='map' style='width: 42rem; height: 54rem; float: right;'></div>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-6">
+                    <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
+                        </div>
+                        <div class="col">
+                          <br><br><br>
+                          <h2>Família Guimarães</h2>
+                          <h3 class="fs-6">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                          </h3>
+                          <br><br><br>
+                        </div>
+                    </div>
+                    <div class="row align-items-center" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/familia2.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
+                        </div>
+                          <div class="col">
+                            <br><br><br>
+                            <h2>Família Meireles</h2>
+                            <h3 class="fs-6">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                            </h3>
+                            <br><br><br>
+                          </div>
+                    </div>
+                    <div class="row align-items-end" style="padding-top: 30px; padding-bottom: 30px;">
+                        <div class="col" style="padding-right: 20px;">
+                            <img src="img/familia3.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
+                        </div>
+                        <div class="col">
+                          <br><br><br>
+                          <h2>Família Pimentel</h2>
+                          <h3 class="fs-6">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                          </h3>
+                          <br><br><br>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5 vh-100 min-vh-90" id='map' style='outline-style: dotted;'>
+                </div> 
+            </div>   
+        </div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZ2FicmllbGdtY2hhdmVzIiwiYSI6ImNrdXkyOGw5YzJibXkyb29kNDJ4ZjM4cGUifQ.Mc6JtYS3ZSgxk9cLtiAGlw';
     var map = new mapboxgl.Map({
