--- a/source/muralVagas.html
+++ b/source/muralVagas.html
@@ -43,13 +43,14 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-6">
+                  <h3 style="padding-top: 22px; padding-left: 10px;">Mural de Vagas</h3>
                     <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
                         </div>
                         <div class="col">
                           <br><br><br>
-                          <h2>Família Guimarães</h2>
+                          <h3>Família Guimarães</h3>
                           <h3 class="fs-6">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
                           </h3>
@@ -62,7 +63,7 @@
                         </div>
                           <div class="col">
                             <br><br><br>
-                            <h2>Família Meireles</h2>
+                            <h3>Família Meireles</h3>
                             <h3 class="fs-6">
                               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
                             </h3>
@@ -75,7 +76,7 @@
                         </div>
                         <div class="col">
                           <br><br><br>
-                          <h2>Família Pimentel</h2>
+                          <h3>Família Pimentel</h3>
                           <h3 class="fs-6">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
                           </h3>
@@ -83,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-5 vh-100 min-vh-90" id='map' style='outline-style: dotted;'>
+                <div class="col-5 vh-100 min-vh-90" id='map' style='margin-top: 90px;'>
                 </div> 
             </div>   
         </div>
