--- a/source/muralBabas.html
+++ b/source/muralBabas.html
@@ -43,7 +43,14 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-6">
-                  <h3 style="padding-top: 22px; padding-left: 10px;">Mural de Babás</h3>
+                  <div class="search-box">
+                      <input type="text" class="search-txt" placeholder="Pesquisa">
+                      <a href="#" class="search-btn">
+                        <img src="img/loupe.png" alt="Lupa" height="20" width="20">
+
+                      </a>
+                  </div>
+                  <h3 style="padding-top: 22px; padding-left: 10px; margin-top: 40px;">Mural de Babás</h3>
                     <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/mulher1.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
