Perfis, Vagas e murais
Adicionados perfis, vagas e murais customizados e personalizados. Correções gerais.

--- a/source/muralVagas.html
+++ b/source/muralVagas.html
@@ -12,6 +12,7 @@
     <link href="styleMuralBabas.css" rel="stylesheet">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="icon" href="/source/img/LogoAlibaba.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="cabecao">
@@ -52,19 +53,22 @@
                   </div>
 
                   <h3 style="padding-top: 22px; padding-left: 10px; margin-top: 40px;">Mural de Vagas</h3>
+                  <a href="perfilVagas.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
-                        <div class="col" style="padding-right: 20px;">
-                            <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
-                        </div>
-                        <div class="col">
-                          <br><br><br>
-                          <h3>Família Guimarães</h3>
-                          <h3 class="fs-6">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
-                          </h3>
-                          <br><br><br>
-                        </div>
-                    </div>
+                      <div class="col" style="padding-right: 20px;">
+                          <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
+                      </div>
+                      <div class="col">
+                        <br><br><br>
+                        <h3>Família Guimarães</h3>
+                        <h3 class="fs-6">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis voluptates dicta accusantium itaque quis repellat soluta cum. Velit, nam quos?
+                        </h3>
+                        <br><br><br>
+                      </div>
+                  </div>
+                  </a>  
+                  <a href="perfilVagas2.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-center" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/familia2.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
@@ -78,6 +82,8 @@
                             <br><br><br>
                           </div>
                     </div>
+                  </a>
+                  <a href="perfilVagas3.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-end" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/familia3.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
@@ -91,6 +97,7 @@
                           <br><br><br>
                         </div>
                     </div>
+                  </a>
                 </div>
                 <div class="col-5 vh-100 min-vh-90" id='map' style='margin-top: 90px;'>
                 </div> 
