--- a/source/perfilVagas3.html
+++ b/source/perfilVagas3.html
@@ -43,11 +43,11 @@
 <div class="container">
   <div class="row justify-content-between">
       <div class="col-7" style="margin-top: 90px; border-left-style: groove; border-top-style: groove; border-top-left-radius: 10px;">
-        <h3 style="margin-top: 15px; margin-left: 5px;">Marina Alencar</h3>
+        <h3 style="margin-top: 15px; margin-left: 5px;">Família Pimentel</h3>
           <div class="row">
             <div class="col-4" style="margin-top: 30px;">
             <div class="col" style="padding-right: 2px;">
-            <img src="img/mulher1.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
+            <img src="img/familia3.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
             </div>
         </div>
         <div class="col-7" style="margin-top: 30px; margin-left: 5px;" >
@@ -63,6 +63,8 @@
       <div class="col-md-10 offset-md-1" style="margin-top: 100px;">
         <h3 class="fs-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis dolore illum corrupti, eligendi delectus quod aspernatur? Hic nam, vero facere unde provident odit ab quibusdam cupiditate minus eveniet expedita repellat ad quia, commodi quidem cumque voluptate esse totam consequuntur explicabo, modi dolor! Quam asperiores enim quasi inventore laborum itaque.</h3>
       </div> 
+      <img src="img/familia3.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px ;margin-left: 50px; " height=280px >
+      <img src="img/familia3.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px ;margin-left: 100px; " height=280px >
       </div>
       <div class="col-5 vh-100 min-vh-90" id='map' style="margin-top: 90px; border-top-style: groove; border-right-style: groove; border-top-right-radius: 10px;">
       </div> 
