--- a/source/muralBabas.html
+++ b/source/muralBabas.html
@@ -51,6 +51,7 @@
                       </a>
                   </div>
                   <h3 style="padding-top: 22px; padding-left: 10px; margin-top: 40px;">Mural de Babás</h3>
+                  <a href="perfilBabas.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-start" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/mulher1.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
@@ -64,6 +65,8 @@
                           <br><br><br>
                         </div>
                     </div>
+                  </a>
+                  <a href="perfilBabas2.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-center" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/mulher2.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
@@ -77,6 +80,8 @@
                             <br><br><br>
                           </div>
                     </div>
+                  </a>
+                  <a href="perfilBabas3.html" style="color: black; text-decoration: none;">
                     <div class="row align-items-end" style="padding-top: 30px; padding-bottom: 30px;">
                         <div class="col" style="padding-right: 20px;">
                             <img src="img/mulher3.jfif" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px;" height=280px >
@@ -90,6 +95,7 @@
                           <br><br><br>
                         </div>
                     </div>
+                  </a>  
                 </div>
                 <div class="col-5 vh-100 min-vh-90" id='map' style='margin-top: 90px;'>
                 </div> 
