--- a/source/perfilVagas.html
+++ b/source/perfilVagas.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mude o nome</title>
+    <title>Encontre aqui sua babá</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script defer src="scripts.js"></script>
-    <link href="styleTemplate.css" rel="stylesheet">
+    <link href="styleMuralBabas.css" rel="stylesheet">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 </head>
@@ -40,7 +40,36 @@
             </ul>
           </div>
         </nav>
-        <div id='map' style='width: 42rem; height: 54rem; float: right;'></div>
+<div class="container">
+  <div class="row justify-content-between">
+      <div class="col-7" style="margin-top: 90px; border-left-style: groove; border-top-style: groove; border-top-left-radius: 10px;">
+        <h3 style="margin-top: 15px; margin-left: 5px;">Família Guimarães</h3>
+          <div class="row">
+            <div class="col-4" style="margin-top: 30px;">
+            <div class="col" style="padding-right: 2px;">
+            <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px; " height=280px >
+            </div>
+        </div>
+        <div class="col-7" style="margin-top: 30px; margin-left: 5px;" >
+          <h3 class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus hic, at mollitia amet, nulla eum repellat autem assumenda, reiciendis laudantium neque vitae saepe iusto obcaecati expedita est sed nobis repudiandae vero temporibus? Iste qui accusamus nesciunt doloribus, itaque id. Ipsa, eligendi velit. Mollitia aliquam adipisci reprehenderit nesciunt, corrupti ab, quaerat tempore temporibus aperiam quas ipsum quisquam perferendis iste aliquid quidem ad vero. Quas nihil provident atque dolores. Aut, tenetur? Minus optio eius tempore libero quibusdam voluptates. Sed culpa est itaque.</h3>
+        </div>
+      </div> 
+      <div class='col-4'>
+        <h3 class="fs-6" style='margin-left: 5px;'>Belo Horizonte, Grajaú</h3>
+      </div>   
+      <div class="col-md-10 offset-md-1" style="margin-top: 100px; outline-style: groove;">
+        <h3 class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis dolore illum corrupti, eligendi delectus quod aspernatur? Hic nam, vero facere unde provident odit ab quibusdam cupiditate minus eveniet expedita repellat ad quia, commodi quidem cumque voluptate esse totam consequuntur explicabo, modi dolor! Quam asperiores enim quasi inventore laborum itaque.</h3>
+      </div> 
+      <div class="col-md-10 offset-md-1" style="margin-top: 100px;">
+        <h3 class="fs-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis dolore illum corrupti, eligendi delectus quod aspernatur? Hic nam, vero facere unde provident odit ab quibusdam cupiditate minus eveniet expedita repellat ad quia, commodi quidem cumque voluptate esse totam consequuntur explicabo, modi dolor! Quam asperiores enim quasi inventore laborum itaque.</h3>
+      </div> 
+      <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px ;margin-left: 50px; " height=280px >
+      <img src="img/familia1.jpg" class="img-fluid img-thumbnail" alt="logo" width=280px style="min-width: 150px; min-height: 150px ;margin-left: 100px; " height=280px >
+      </div>
+      <div class="col-5 vh-100 min-vh-90" id='map' style="margin-top: 90px; border-top-style: groove; border-right-style: groove; border-top-right-radius: 10px;">
+      </div> 
+  </div>   
+</div>
     <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZ2FicmllbGdtY2hhdmVzIiwiYSI6ImNrdXkyOGw5YzJibXkyb29kNDJ4ZjM4cGUifQ.Mc6JtYS3ZSgxk9cLtiAGlw';
     var map = new mapboxgl.Map({
